# mimesis

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  Vagrantfile  driver.c  klee.sh  protocol.h  solve.py  test-angr.py  test-bap.py
.oldcode/: README.old.md  check-smt-eq.sh  collect-stats.sh  driver.c  run.sh
.oldcode/angr/: solve.py
.oldcode/angr/0-sourcehash/: run.sh  solve.py
.oldcode/angr/2-perf-w-parse-args/: main-parse-args.cpp  run.sh
.oldcode/bap/: setup.sh
.oldcode/bap/c-bindings/: .gitignore
.oldcode/klee-git/: .gitignore
.oldcode/klee-libc++/: PKGBUILD
.oldcode/klee-uclibc/: .SRCINFO
angr/0-sourcehash/: Makefile
angr/2-perf-w-parse-args/: main-no-parse-args.cpp  solve.py
angr/3-haproxy/: run.sh  solve.py
bap/c-bindings/: PKGBUILD
bap/python-bindings/: PKGBUILD
bap/tutorial/path_check/: Makefile  path_check.py
cmake/: FindBpfObject.cmake  FindDPDK.cmake  FindKLEE.cmake  FindLLVM.cmake  FindZ3.cmake
depends/: .gitignore  conanfile.txt  requirements.txt  setup.sh  vcpkg.json
depends/docker/: Makefile  s2e.dockerfile  systemtap.dockerfile
depends/docker/s2e/: Dockerfile
depends/docker/s2e-builder/: Dockerfile
depends/docker/stp-builder/: Dockerfile
depends/docker/systemtap/: Dockerfile
depends/docker/target-builder/: Dockerfile  systemtap-3.2.patch
depends/mimesis-dev/: PKGBUILD
depends/patches/: 00-fix-qemu-config.patch  01-qemu-glfs_ftruncate.patch  02-qemu-glfs_io_cbk.patch  03-qemu-x11-window-type.patch  03-s2e-guest-images-wget-options.patch  04-s2e-guest-images-additional-pkgs.patch  04-s2e-guest-images-ubuntu-iso.patch  04-s2e-guest-images-ubuntu-packages.patch  04-s2e-s2ecmd-atomic.patch  05-s2e-env-show-target-output.patch  05-s2e-kernel-config.patch  05-s2e-linux-kernel-enable-uprobes.patch  05-s2e-s2ebios.patch  06-s2e-guest-images-ubuntu-iso.patch  06-s2e-linux-kernel-disable-apparmor.patch  07-guest-linux-launch-script.patch  07-s2e-linux-kernel-netdev_start_xmit.patch
experiments/: check-smt-eq.sh  collect-stats.sh  results.ods  run.sh
experiments/0-sourcehash/: solve.py
experiments/1-roundrobin/: solve.py
experiments/2-perf-w-parse-args/: solve.py
experiments/2-perf-w-parse-args/src/: astyle.sh
experiments/3-haproxy/: haproxy-1.5.0  haproxy-2.0.7  run.sh  solve.py
load_balancer/: main.cpp
load_balancer/configs/: roundrobin
load_balancer/src/: LB_algo.cpp  LB_algo.h  LeastConn.cpp  LeastConn.h  RoundRobin.cpp  RoundRobin.h  main.cpp
paper/checkpoint-1/: Makefile  paper.bib  paper.tex  report.tex  usenix2019_v3.sty
paper/checkpoint-2/: report.tex
paper/final/: Makefile  newcommands.tex  other.bib  report.bib  report.tex
paper/final/Section/: Notuse.tex  background.tex  design.tex
paper/final/section/: Notuse.tex  background.tex  conclusion.tex  design.tex  eval.tex  implementation.tex  intro.tex  notused.tex  related_work.tex
paper/proposal/: proposal.tex
poster/: .gitignore  Makefile  beamerposter.sty  beamerthemeI6pd2.sty  poster.bib  poster.tex
proposal/: Makefile  proposal.tex
scripts/: activate.sh  build.sh  clang_profile.ini  configure.sh  docker-build.sh  gcc_profile.ini  hugepages.sh  logparser.py  plot.py  run-experiments.sh  run-query.sh  s2e.sh  style.sh  test.sh
src/: CMakeLists.txt  driver.c  hello_world.stp  httpd.cpp  kernel_probes.stp  lb.conf  mimesis.cpp  netif_receive_skb.stp  packet_set.cpp  packet_set.hpp  sender.cpp  sender.hpp  symbolic_ingress.stp  test_uprobe.stp  user_probes.stp
src/lb/: LB_algo.cpp  LB_algo.hpp  LeastConn.cpp  LeastConn.hpp  RoundRobin.cpp  RoundRobin.hpp  SourceHash.cpp  main.cpp
src/lib/: logger.cpp  logger.hpp  net.cpp  net.hpp  stats.cpp  stats.hpp  usernet.cpp  usernet.hpp
src/libps/: CMakeLists.txt  PacketSet.cpp  PacketSet.hpp  bdd.cpp  bdd.hpp  bitvector.cpp  bitvector.hpp  klee-interpreter.cpp  klee-interpreter.hpp  manager.cpp  manager.hpp  model.cpp  model.hpp  packetset.cpp  packetset.hpp  serializer.cpp  serializer.hpp
target-nfs/: LB.cpp  LB_LeastConn.cpp  LB_LeastConn.hpp  LB_RoundRobin.hpp  LB_SourceHash.hpp  router-s1.c  router-s2.c  router-s3.c
targets/: .gitignore  CMakeLists.txt  LB_Algo.cpp  LB_Algo.hpp  LB_RoundRobin.cpp  LB_SourceHash.cpp  Makefile  router-s2.c  simplerouter.c
targets/demo-routers/: README.md  r1.cpp  r2.cpp  r3.cpp
targets/dpdk/: hello-world.c  l2fwd.c
targets/ebpf/: demo-stateful.bpf.c  demo-stateless.bpf.c  demo-stateless.c  demo-stateless.cpp  ip-stateful.bpf.c  ip-stateless.bpf.c  xdp-redirect.bpf.c  xdp-redirect.c  xdp_redirect.bpf.c  xdp_redirect.c
targets/firewalls/: README.md
targets/hello-world/: hw1.cpp
targets/http/: httpd.cpp
targets/ip-routers/: README.md
targets/kernel/: README.md  demo-stateful-d3.cpp  demo-stateful-pcpp.cpp  demo-stateful.cpp  demo-stateless-pcpp.cpp  demo-stateless.cpp  ip-stateful-pcpp.cpp  ip-stateful.cpp  ip-stateless-pcpp.cpp  ip-stateless.cpp
targets/lb/: LB_algo.cpp  LeastConn.hpp  RoundRobin.cpp  SourceHash.cpp  SourceHash.hpp
targets/lbs/: LB.cpp  LB_Algo.cpp  LB_Algo.hpp  LB_LeastConn.cpp  LB_LeastConn.hpp  LB_RoundRobin.cpp  LB_RoundRobin.hpp  LB_SourceHash.cpp  LB_SourceHash.hpp  README.md
targets/lib/: logger.cpp  logger.hpp  net.cpp  net.hpp
targets/user/: demo-r1.cpp  demo-stateful.cpp  demo-stateless.cpp  demo.cpp  hello-world.cpp  ip-echo.cpp  ip-r1.cpp  ip-stateful.cpp  ip-stateless.cpp  l2-echo.cpp  l2-forward.cpp
tests/: CMakeLists.txt  util.cpp  util.hpp
tests/data/: ps_bdd_diamond.dot  ps_bdd_diamond.txt  ps_bdd_tower.dot  ps_bdd_tower.txt  ps_bdd_train.dot  ps_bdd_train.txt  ps_bdd_vars_cube.dot  ps_bdd_vars_cube.txt  ps_bdd_wildcard.dot  ps_bdd_wildcard.txt
tests/libps/: PacketSet.cpp  bdd.cpp  bitvector.cpp  klee-interpreter.cpp  manager.cpp  packetset.cpp
usenix2019-templates/: usenix2019_v3.1.bib
vagrant/: Vagrantfile
vagrant/configs/: .bashrc  .tmux.conf
